  (Benji York, Brad Crittenden)

BUG FIXES
~~~~~~~~~

* Add 'subunit --no-xfail', which will omit expected failures from the subunit
  stream. (John Arbash Meinel, #623642)

* Add 'subunit -F/--only-genuine-failures' which sets all of '--no-skips',
  '--no-xfail', '--no-passthrough, '--no-success', and gives you just the
  failure stream. (John Arbash Meinel)

* Tag support has been implemented for TestProtocolClient.
  (Robert Collins, #518016)

* Tags can now be filtered. (Jonathan Lange, #664171)

* Test suite works with latest testtools (but not older ones - formatting
  changes only). (Robert Collins)

0.0.7
-----

The Subunit Python test runner ``python -m subunit.run`` can now report the
test ids and also filter via a test id list file thanks to improvements in
``testtools.run``. See the testtools manual, or testrepository - a major
user of such functionality.

Additionally the protocol now has a keyword uxsuccess for Unexpected Success
reporting. Older parsers will report tests with this status code as 'lost
connection'.

IMPROVEMENTS
~~~~~~~~~~~~

* Add ``TimeCollapsingDecorator`` which collapses multiple sequential time()
  calls into just the first and last. (Jonathan Lange)

* Add ``TagCollapsingDecorator`` which collapses many tags() calls into one
  where possible. (Jonathan Lange, Robert Collins)

* Force flush of writes to stdout in c/tests/test_child.
  (Jelmer Vernooij, #687611)

* Provisional Python 3.x support.
  (Robert Collins, Tres Seaver, Martin[gz], #666819)

* ``subunit.chunked.Decoder`` Python class takes a new ``strict`` option,
  which defaults to ``True``. When ``False``, the ``Decoder`` will accept
  incorrect input that is still unambiguous. i.e. subunit will not barf if
  a \r is missing from the input. (Martin Pool)

* ``subunit-filter`` preserves the relative ordering of ``time:`` statements,
  so you can now use filtered streams to gather data about how long it takes
  to run a test. (Jonathan Lange, #716554)
